--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -90,28 +90,7 @@
             <div class="screen second-screen scrolling-item">
                 <div class="container-page">
                     <div class="container-content">
-                        <header class="header">
-                            <div class="header__wrapper for-desc-flex">
-                                <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                <nav class="header__nav">
-                                    <ul class="header__menu menu">
-                                        <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                        <li class="menu__item menu-items-txt">Характеристики</li>
-                                        <li class="menu__item menu-items-txt">интерактив</li>
-                                        <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                    </ul>
-                                </nav>
-                                <div class="header-contacts__buttons">
-                                    <button class="button button_transparent">Купить</button>
-                                    <button class="button button_purple-text">Обратная связь</button>
-                                </div>
-                            </div>
-                            <!-- <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt=""> -->
-                            <!-- <div class="burger for-mob-block">
-                                <div class="burger__center-stick"></div>
-                            </div> -->
-                        </header>
+                        <!-- @@include('header.html') -->
                         <div class="second-screen__content-wrapper">
                             <div class="second-screen__content">
                                 <div class="second-screen__left-part">
@@ -120,7 +99,8 @@
                                 <div class="second-screen__right-part">
                                     <div class="second-screen__text">
                                         <h2 class="animate-element">Буквально прозрачная технология</h2>
-                                        <p class="animate-element">Простой и интуитивно понятный функционал в сочетании с лаконичным кристально
+                                        <p class="animate-element">Простой и интуитивно понятный функционал в сочетании
+                                            с лаконичным кристально
                                             чистым
                                             дизайном: прозрачный дисплей и безграничные возможности демонстрации
                                             контента
@@ -194,32 +174,13 @@
             <div class="screen third-screen scrolling-item">
                 <div class="container-page">
                     <div class="container-content">
-                        <header class="header">
-                            <div class="header__wrapper for-desc-flex">
-                                <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                <nav class="header__nav">
-                                    <ul class="header__menu menu">
-                                        <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                        <li class="menu__item menu-items-txt">Характеристики</li>
-                                        <li class="menu__item menu-items-txt">интерактив</li>
-                                        <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                    </ul>
-                                </nav>
-                                <div class="header-contacts__buttons">
-                                    <button class="button button_transparent">Купить</button>
-                                    <button class="button button_purple-text">Обратная связь</button>
-                                </div>
-                            </div>
-                            <!-- <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt=""> -->
-                            <!-- <div class="burger for-mob-block">
-                                <div class="burger__center-stick"></div>
-                            </div> -->
-                        </header>
+                        <!-- @@include('header.html') -->
                         <div class="third-screen__content">
                             <div class="third-screen__text-block animate-element">
-                                <h2 class="animate-element">OLED — это высокотехнологичное актуальное решение для создания дисплеев.</h2>
-                                <p class="animate-element">Его главные преимущества: дисплею не нужен каркас и внешняя подсветка! Потому что он
+                                <h2 class="animate-element">OLED — это высокотехнологичное актуальное решение для
+                                    создания дисплеев.</h2>
+                                <p class="animate-element">Его главные преимущества: дисплею не нужен каркас и внешняя
+                                    подсветка! Потому что он
                                     основан на технологии органических светодиодов, которые излучают свет
                                     самостоятельно,
                                     когда через них проходит электрический ток.</p>
@@ -246,29 +207,7 @@
 
                     <div class="four-screen__bcg  container-content container-content--no-margin">
                         <div class="container-relative">
-                            <header class="header">
-                                <div class="header__wrapper for-desc-flex">
-                                    <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                    <nav class="header__nav">
-                                        <ul class="header__menu menu">
-                                            <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                            <li class="menu__item menu-items-txt">Характеристики</li>
-                                            <li class="menu__item menu-items-txt">интерактив</li>
-                                            <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                            <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                        </ul>
-                                    </nav>
-                                    <div class="header-contacts__buttons">
-                                        <button class="button button_transparent">Купить</button>
-                                        <button class="button button_purple-text">Обратная связь</button>
-                                    </div>
-                                </div>
-                                <!-- <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
-                                <div class="burger for-mob-block">
-                                    <div class="burger__center-stick"></div>
-                                </div> -->
-                            </header>
-
+                            <!-- @@include('header.html') -->
                             <div class="four-screen__rama">
                                 <div class="four-screen__rama-blur"></div>
                                 <img class="four-screen__rama-img" src="../img/Product-page/4-screen-rama.png" alt="">
@@ -294,32 +233,12 @@
             <div class="screen fifth-screen scrolling-item">
                 <div class="container-page">
                     <div class="container-content">
-                        <header class="header">
-                            <div class="header__wrapper for-desc-flex">
-                                <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                <nav class="header__nav">
-                                    <ul class="header__menu menu">
-                                        <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                        <li class="menu__item menu-items-txt">Характеристики</li>
-                                        <li class="menu__item menu-items-txt">интерактив</li>
-                                        <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                    </ul>
-                                </nav>
-                                <div class="header-contacts__buttons">
-                                    <button class="button button_transparent">Купить</button>
-                                    <button class="button button_purple-text">Обратная связь</button>
-                                </div>
-                            </div>
-                            <!-- <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
-                            <div class="burger for-mob-block">
-                                <div class="burger__center-stick"></div>
-                            </div> -->
-                        </header>
+                        <!-- @@include('header.html') -->
                         <div class="fifth-screen__content">
                             <div class="fifth-screen__text-block">
                                 <!-- <div class="fifth-screen__text-cover"></div> -->
-                                <img class="fifth-screen__bcg animate-element" src="../img/Product-page/hero-bg.png" alt="">
+                                <img class="fifth-screen__bcg animate-element" src="../img/Product-page/hero-bg.png"
+                                    alt="">
                                 <h3 class="fifth-screen__text">Всё, что нужно —<br>прозрачный OLED-дисплей<br>от Гефест
                                     Капитал и<br>
                                     немного креативности!</h3>
@@ -335,31 +254,11 @@
             <div class="screen sixth-screen scrolling-item">
                 <div class="container-page">
                     <div class="container-content ">
-                        <header class="header">
-                            <div class="header__wrapper for-desc-flex">
-                                <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                <nav class="header__nav">
-                                    <ul class="header__menu menu">
-                                        <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                        <li class="menu__item menu-items-txt">Характеристики</li>
-                                        <li class="menu__item menu-items-txt">интерактив</li>
-                                        <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                    </ul>
-                                </nav>
-                                <div class="header-contacts__buttons">
-                                    <button class="button button_transparent">Купить</button>
-                                    <button class="button button_purple-text">Обратная связь</button>
-                                </div>
-                            </div>
-                            <!-- <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
-                            <div class="burger for-mob-block">
-                                <div class="burger__center-stick"></div>
-                            </div> -->
-                        </header>
+                        <!-- @@include('header.html') -->
                         <div class="sixth-screen__content-wrapper">
                             <div class="sixth-screen__left-part sixth-screen__content">
-                                <div id="rent-content-swiper" class="swiper-container rent-content-swiper animate-element">
+                                <div id="rent-content-swiper"
+                                    class="swiper-container rent-content-swiper animate-element">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide rent-content-slide"><img
                                                 src="../img/Product-page/6-slider-1.png"></div>
@@ -520,28 +419,7 @@
 
                     <div class="seventh-screen__bcg container-content">
                         <div class="container-relative container-relative--z-index">
-                            <header class="header">
-                                <div class="header__wrapper for-desc-flex">
-                                    <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-                                    <nav class="header__nav">
-                                        <ul class="header__menu menu">
-                                            <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                                            <li class="menu__item menu-items-txt">Характеристики</li>
-                                            <li class="menu__item menu-items-txt">интерактив</li>
-                                            <li class="menu__item menu-items-txt">Сценарии использования</li>
-                                            <li class="menu__item menu-items-txt">Аренда и продажа</li>
-                                        </ul>
-                                    </nav>
-                                    <div class="header-contacts__buttons">
-                                        <button class="button button_transparent">Купить</button>
-                                        <button class="button button_purple-text">Обратная связь</button>
-                                    </div>
-                                </div>
-                                <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
-                                <div class="burger for-mob-block">
-                                    <div class="burger__center-stick"></div>
-                                </div>
-                            </header>
+                            <!-- @@include('header.html') -->
                             <div class="rent-content-swiper__nav seventh-screen__swiper-nav">
                                 <div class="swiper-button-prev rent-content-left seventh-screen__left"></div>
                                 <div class="counterMain seventh-screen__counter">1/3</div>
