first screen anim - done

--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -85,16 +85,16 @@
                                 технология,
                                 которую легко применить уже сегодня
                             </h1>
-                            <!-- <h1 class="title first-screen__first-title animate-element hide-element-bottom for-desc-block"
+                            <h1 class="title first-screen__first-title animate-element  for-desc-block"
                                 data-animate="firstScreen">VR-эффект без дополнительного оборудования
                             </h1>
-                            <h1 class="title first-screen__first-title animate-element hide-element-bottom for-desc-block"
+                            <h1 class="title first-screen__first-title animate-element  for-desc-block"
                                 data-animate="firstScreen">OLED-transparent для реализации самых креативных рекламных
                                 решений
-                            </h1> -->
+                            </h1>
 
                             <div class="rama rama--circle">
-                                <div id="switcher" class="switcher screen__content animate-element opacity-on">
+                                <div id="switcher" class="switcher screen__content animate-element">
                                     <div class="switcher__holder">
                                         <img src="../img/ico/switcher1.svg" alt="">
                                         <div class="switcher__toggler" data-animate="firstScreen"></div>
