second, third screens

--- a/src/html/test.html
+++ b/src/html/test.html
@@ -4,6 +4,12 @@
     <div class="text">Текст номер 3</div>
 </div>
 <div class="container red">
+    <div class="text">Текст номер 1</div>
+    <div class="text">Текст номер 2</div>
+    <div class="text">Текст номер 3</div>
 </div>
 <div class="container yellow">
+    <div class="text">Текст номер 1</div>
+    <div class="text">Текст номер 2</div>
+    <div class="text">Текст номер 3</div>
 </div>
