--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -134,48 +134,48 @@
                                             контента
                                         </p>
                                     </div>
-                                    <div class="second-screen__tabs animate-element">
-                                        <div class="second-screen__tab tab">
+                                    <div class="second-screen__tabs">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">диагональ экрана</div>
                                             <div class="tab__value">55`</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Шаг пикселя</div>
                                             <div class="tab__value">0.630mm x 0.630mm</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Время отклика</div>
                                             <div class="tab__value">8ms (typ.)</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Прозрачность</div>
                                             <div class="tab__value">40%</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Разрешение</div>
                                             <div class="tab__value">1920*1080 px</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Частота обновления</div>
                                             <div class="tab__value">60Hz</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Материал корпуса</div>
                                             <div class="tab__value">металл</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Размер дисплея</div>
                                             <div class="tab__value">681(W)x1210(H) мм</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab animate-element">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">Тип подсветки</div>
                                             <div class="tab__value">OLED</div>
