--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -118,36 +118,44 @@
             <section class="screen dop-screen">
                 <div class="container-page">
                     <div class="container-content">
-                        <div class="dop-screen__content-wrapper">
-                            <div class="dop-screen__item">
-                                <div class="dop-screen__title">Первый прозрачный дисплей</div>
-                                <div class="dop-screen__desc">Визуально легкий и воздушный прозрачный каркас создает
-                                    ощущение полного погружения, концентрирует внимание и за счет этого — показывает
-                                    феноменальные результаты в рекламных интеграциях.</div>
-                                <img src="../img/Product-page/dop-screen-1.png" alt="" class="dop-screen__image">
+                        <div style="width: 100%; height: 100%; position: relative;">
+                            <div class="dop-screen__content-wrapper">
+                                <div class="dop-screen__item">
+                                    <div class="dop-screen__title">Первый прозрачный дисплей</div>
+                                    <div class="dop-screen__desc">Визуально легкий и воздушный прозрачный каркас создает
+                                        ощущение полного погружения, концентрирует внимание и за счет этого — показывает
+                                        феноменальные результаты в рекламных интеграциях.</div>
+                                    <img src="../img/Product-page/dop-screen-1.png" alt="" class="dop-screen__image">
+                                </div>
+                                <div class="dop-screen__item">
+                                    <div class="dop-screen__title">Максимум внимания, минимум пространства</div>
+                                    <div class="dop-screen__desc">Визуально легкий и воздушный каркас создает ощущение
+                                        полного погружения, концентрирует внимание и за счет этого — показывает
+                                        феноменальные результаты в рекламных интеграциях.</div>
+                                    <img src="../img/Product-page/dop-screen-2.png" alt="" class="dop-screen__image">
+                                </div>
                             </div>
-                            <div class="dop-screen__item">
-                                <div class="dop-screen__title">Максимум внимания, минимум пространства</div>
-                                <div class="dop-screen__desc">Визуально легкий и воздушный каркас создает ощущение
-                                    полного погружения, концентрирует внимание и за счет этого — показывает
-                                    феноменальные результаты в рекламных интеграциях.</div>
-                                <img src="../img/Product-page/dop-screen-2.png" alt="" class="dop-screen__image">
-                            </div>
-                            <div class="dop-screen__item">
-                                <div class="dop-screen__title">Комфорт и стиль</div>
-                                <div class="dop-screen__desc">Прозрачный OLED дисплей дает потрясающе четкое изображение
-                                    с оптимальными для восприятия параметрами: цветопередача, глубина, яркость,
-                                    контрастность, плотность пикселей. Взаимодействие с таким дисплеем— это приятный и
-                                    простой процесс.</div>
-                                <img src="../img/Product-page/dop-screen-3.png" alt="" class="dop-screen__image">
-                            </div>
-                            <div class="dop-screen__item">
-                                <div class="dop-screen__title">Дополняя реальность</div>
-                                <div class="dop-screen__desc">Создаем новые грани видимых объектов, соединяем и
-                                    экспериментируем. В считанные секунды меняем оттенок нового презентационного
-                                    автомобиля, рассматриваем виртуальные детали мраморной скульптуры, узнаем информацию
-                                    о её авторе и устанавливаем декорации-голограммы для предстоящего перфоманса.</div>
-                                <img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image">
+                            <div class="dop-screen__content-wrapper">
+                                <div class="dop-screen__item">
+                                    <div class="dop-screen__title">Комфорт и стиль</div>
+                                    <div class="dop-screen__desc">Прозрачный OLED дисплей дает потрясающе четкое
+                                        изображение
+                                        с оптимальными для восприятия параметрами: цветопередача, глубина, яркость,
+                                        контрастность, плотность пикселей. Взаимодействие с таким дисплеем— это приятный
+                                        и
+                                        простой процесс.</div>
+                                    <img src="../img/Product-page/dop-screen-3.png" alt="" class="dop-screen__image">
+                                </div>
+                                <div class="dop-screen__item">
+                                    <div class="dop-screen__title">Дополняя реальность</div>
+                                    <div class="dop-screen__desc">Создаем новые грани видимых объектов, соединяем и
+                                        экспериментируем. В считанные секунды меняем оттенок нового презентационного
+                                        автомобиля, рассматриваем виртуальные детали мраморной скульптуры, узнаем
+                                        информацию
+                                        о её авторе и устанавливаем декорации-голограммы для предстоящего перфоманса.
+                                    </div>
+                                    <img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -254,11 +262,6 @@
                                     основан на технологии органических светодиодов, которые излучают свет
                                     самостоятельно,
                                     когда через них проходит электрический ток.</p>
-                                <button
-                                    class="button second-screen__button third-screen__button animate-element transition">
-                                    <p>Смотреть видео</p>
-                                    <img src="../img/ico/Forward.svg" alt="">
-                                </button>
                             </div>
                             <div class="third-screen__text-block">
                                 <h2 class="animate-element transition">Применяйте OLED-дисплей в максимально широком
@@ -268,11 +271,6 @@
                                     создания, поместить инструкцию по применению, дополнить объект фото/видео его
                                     внутреннего устройства или показать, как объект вписывается в разные сценарии жизни
                                     пользователей. Нет никаких пределов!</p>
-                                <button
-                                    class="button second-screen__button third-screen__button animate-element transition">
-                                    <p>Смотреть видео</p>
-                                    <img src="../img/ico/Forward.svg" alt="">
-                                </button>
                             </div>
                             <div class="third-screen__text-block">
                                 <h2 class="animate-element transition">Интегрируйте любые рекламные инструменты на
@@ -282,12 +280,13 @@
                                     текст, графика, логотипы, голограммы, видео-мосты) в новом формате и собирайте
                                     восторженные отзывы, налаживайте коммуникацию с аудиторией, взаимодействуйте
                                     качественно и на перспективу.</p>
-                                <button
-                                    class="button second-screen__button third-screen__button animate-element transition">
-                                    <p>Смотреть видео</p>
-                                    <img src="../img/ico/Forward.svg" alt="">
-                                </button>
                             </div>
+                            <button
+                                class="button second-screen__button third-screen__button">
+                                <p>Смотреть видео</p>
+                                <img src="../img/ico/Forward.svg" alt="">
+                            </button>
+
                         </div>
                     </div>
                 </div>
@@ -353,12 +352,13 @@
                     </div>
                 </div>
             </section>
-            <section class="dop-screen2">
+            <section class="screen dop-screen2">
                 <div class="container-page">
                     <div class="container-content">
                         <div class="dop-screen2__content-wrapper">
                             <div class="dop-screen2__left-part dop-screen2__part">
-                                <p class="rent-content__title six-screen-anim dop-screen2__title animate-element">Аренда и контент</p>
+                                <p class="rent-content__title six-screen-anim dop-screen2__title animate-element">Аренда
+                                    и контент</p>
                                 <div class="rent-content__tabs six-screen-anim dop-screen2__tabs">
                                     <div class="rent-content__tab dop-screen2__tab animate-element">Выставки</div>
                                     <div class="rent-content__tab dop-screen2__tab animate-element">Музеи</div>
@@ -366,17 +366,31 @@
                                     <div class="rent-content__tab dop-screen2__tab animate-element">Реклама</div>
                                 </div>
                                 <div class="dop-screen2__tab-contents animate-element">
-                                    <p class="dop-screen2__tab-content">Для выставок. OLED панель может использоваться для визуализации 3D моделей выставочных образцов, элементов различных механизмов, трансляции логотипов. Также, за счет прозрачности можно создать эффект рентгена, дополненной реальности, расположив реальный объект позади.</p>
-                                    <p class="dop-screen2__tab-content">Прозрачный экран позволит показать экспонаты в 3D с эффектом зависания в воздухе, голограммы людей и многое другое. Также, с помощью OLED панели можно реализовать виртуального гида или администратора. Также, с помощью контента можно добиться эффекта рентгена или виртуальной реставрации экспонатов, достраивания из имеющихся частей полной картины.</p>
-                                    <p class="dop-screen2__tab-content">С помощью прозрачного экрана можно реализовать конференц-связь, при которой пользователи будут общаться в виде голографических изображений.</p>
-                                    <p class="dop-screen2__tab-content">На экран можно транслировать контент как с эффектом прозрачности, так и без него, что делает OLED панель универсальным рекламным инструментом. Особенность технологии – более насыщенные цвета, чем у обычных экранов, что сделает вашу рекламу более заметной и привлекательной.</p>
+                                    <p class="dop-screen2__tab-content">Для выставок. OLED панель может использоваться
+                                        для визуализации 3D моделей выставочных образцов, элементов различных
+                                        механизмов, трансляции логотипов. Также, за счет прозрачности можно создать
+                                        эффект рентгена, дополненной реальности, расположив реальный объект позади.</p>
+                                    <p class="dop-screen2__tab-content">Прозрачный экран позволит показать экспонаты в
+                                        3D с эффектом зависания в воздухе, голограммы людей и многое другое. Также, с
+                                        помощью OLED панели можно реализовать виртуального гида или администратора.
+                                        Также, с помощью контента можно добиться эффекта рентгена или виртуальной
+                                        реставрации экспонатов, достраивания из имеющихся частей полной картины.</p>
+                                    <p class="dop-screen2__tab-content">С помощью прозрачного экрана можно реализовать
+                                        конференц-связь, при которой пользователи будут общаться в виде голографических
+                                        изображений.</p>
+                                    <p class="dop-screen2__tab-content">На экран можно транслировать контент как с
+                                        эффектом прозрачности, так и без него, что делает OLED панель универсальным
+                                        рекламным инструментом. Особенность технологии – более насыщенные цвета, чем у
+                                        обычных экранов, что сделает вашу рекламу более заметной и привлекательной.</p>
                                 </div>
-                                <div class="second-screen__buttons animate-element dop-screen2__buttons">
-                                    <div class="button button_purple-text second-screen__button dop-screen2__button animate-element">
+                                <div class="second-screen__buttons dop-screen2__buttons">
+                                    <div
+                                        class="button button_purple-text second-screen__button dop-screen2__button animate-element">
                                         <p>Заказать</p>
                                         <img src="../img/ico/percent-ico.svg" alt="">
                                     </div>
-                                    <div class="button button_purple-text second-screen__button dop-screen2__button animate-element">
+                                    <div
+                                        class="button button_purple-text second-screen__button dop-screen2__button animate-element">
                                         <p>Характеристики</p>
                                         <img src="../img/ico/characteristic-ico.svg" alt="">
                                     </div>
