--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,22 +1,43 @@
 <header class="header">
-    <div class="header__wrapper for-desc-flex">
-        <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
-        <nav class="header__nav">
-            <ul class="header__menu menu">
-                <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                <li class="menu__item menu-items-txt">Характеристики</li>
-                <li class="menu__item menu-items-txt">интерактив</li>
-                <li class="menu__item menu-items-txt">Сценарии использования</li>
-                <li class="menu__item menu-items-txt">Аренда и продажа</li>
-            </ul>
-        </nav>
-        <div class="header-contacts__buttons">
-            <button class="button button_transparent">Купить</button>
-            <button class="button button_purple-text">Обратная связь</button>
+    <div class="header__desc">
+        <div class="header__wrapper for-desc-flex">
+            <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
+            <nav class="header__nav">
+                <ul class="header__menu menu">
+                    <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
+                    <li class="menu__item menu-items-txt">Характеристики</li>
+                    <li class="menu__item menu-items-txt">интерактив</li>
+                    <li class="menu__item menu-items-txt">Сценарии использования</li>
+                    <a href="#rent"><li class="menu__item menu-items-txt">Аренда и продажа</li></a>
+                </ul>
+            </nav>
+            <div class="header-contacts__buttons">
+                <button class="button button_transparent">Купить</button>
+                <button class="button button_purple-text">Обратная связь</button>
+            </div>
+        </div>
+        <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
+        <div class="burger for-mob-block">
+            <div class="burger__center-stick"></div>
         </div>
     </div>
-    <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
-    <div class="burger for-mob-block">
-        <div class="burger__center-stick"></div>
+    <div class="mob-menu for-mob-block">
+        <div class="mob-menu__container">
+            <div class="mob-menu__header">
+                <img class="header__logo--mob-menu logo for-mob-block" src="../img/ico/logo.svg" alt="">
+                <img class="mob-menu__cross" src="../img/ico/cross.svg"></img>
+            </div>
+            <div class="mob-menu__nav">
+                <a href="#" class="mob-menu__items">Kelpie holostand</a>
+                <a href="#" class="mob-menu__items">Характеристики</a>
+                <a href="#" class="mob-menu__items">интерактив</a>
+                <a href="#" class="mob-menu__items">Использование</a>
+                <a href="#" class="mob-menu__items">Аренда и продажа</a>
+            </div>
+            <div class="mob-menu__buttons">
+                <button class="button button_transparent mob-menu__button">Купить</button>
+                <button class="button button_purple-text mob-menu__button">Обратная связь</button>
+            </div>
+        </div>
     </div>
 </header>
