--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 "title":"Kelpie"
 })
 
+<main class="main">
+@@include('html/header.html')
+
 @@include('html/product-page.html')
 
 @@include('html/footer.html',{})
