--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -52,45 +52,63 @@
             <section class="screen dop-screen">
                 <div class="container-page">
                     <div class="container-content">
-                        <div style="width: 100%; height: 100%; position: relative;">
-                            <div class="dop-screen__content-wrapper">
-                                <div class="dop-screen__item">
-                                    <div class="dop-screen__title">Первый прозрачный дисплей</div>
-                                    <div class="dop-screen__desc">Визуально легкий и воздушный прозрачный каркас создает
-                                        ощущение полного погружения, концентрирует внимание и за счет этого — показывает
-                                        феноменальные результаты в рекламных интеграциях.</div>
-                                    <img src="../img/Product-page/dop-screen-1.png" alt="" class="dop-screen__image">
-                                </div>
-                                <div class="dop-screen__item">
-                                    <div class="dop-screen__title">Максимум внимания, минимум пространства</div>
-                                    <div class="dop-screen__desc">Визуально легкий и воздушный каркас создает ощущение
-                                        полного погружения, концентрирует внимание и за счет этого — показывает
-                                        феноменальные результаты в рекламных интеграциях.</div>
-                                    <img src="../img/Product-page/dop-screen-2.png" alt="" class="dop-screen__image">
-                                </div>
-                            </div>
-                            <div class="dop-screen__content-wrapper">
-                                <div class="dop-screen__item">
-                                    <div class="dop-screen__title">Комфорт и стиль</div>
-                                    <div class="dop-screen__desc">Прозрачный OLED дисплей дает потрясающе четкое
-                                        изображение
-                                        с оптимальными для восприятия параметрами: цветопередача, глубина, яркость,
-                                        контрастность, плотность пикселей. Взаимодействие с таким дисплеем— это приятный
-                                        и
-                                        простой процесс.</div>
-                                    <img src="../img/Product-page/dop-screen-3.png" alt="" class="dop-screen__image">
-                                </div>
-                                <div class="dop-screen__item">
-                                    <div class="dop-screen__title">Дополняя реальность</div>
-                                    <div class="dop-screen__desc">Создаем новые грани видимых объектов, соединяем и
-                                        экспериментируем. В считанные секунды меняем оттенок нового презентационного
-                                        автомобиля, рассматриваем виртуальные детали мраморной скульптуры, узнаем
-                                        информацию
-                                        о её авторе и устанавливаем декорации-голограммы для предстоящего перфоманса.
+                        <div style="width: 100%; height: 100%; position: relative;" class="dop-screen__swiper-container swiper-container">
+                            <div class="dop-screen__content-wrapper swiper-wrapper">
+                                <div class="dop-screen__item swiper-slide">
+                                    <div class="dop-screen__upper-part">
+                                        <div class="dop-screen__title">Первый прозрачный дисплей</div>
+                                        <div class="dop-screen__desc">Визуально легкий и воздушный прозрачный каркас создает
+                                            ощущение полного погружения, концентрирует внимание и за счет этого — показывает
+                                            феноменальные результаты в рекламных интеграциях.</div>
                                     </div>
-                                    <img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image">
+                                    <div class="dop-screen__downer-part">
+                                        <img src="../img/Product-page/dop-screen-1.png" alt="" class="dop-screen__image">
+                                    </div>   
+                                </div>
+                                <div class="dop-screen__item swiper-slide">
+                                    <div class="dop-screen__upper-part">
+                                        <div class="dop-screen__title">Максимум внимания, минимум пространства</div>
+                                        <div class="dop-screen__desc">Визуально легкий и воздушный каркас создает ощущение
+                                            полного погружения, концентрирует внимание и за счет этого — показывает
+                                            феноменальные результаты в рекламных интеграциях.</div>
+                                    </div>
+                                    <div class="dop-screen__downer-part">                                            
+                                        <img src="../img/Product-page/dop-screen-2.png" alt="" class="dop-screen__image">
+                                    </div>
+                                </div>
+                                <div class="dop-screen__item swiper-slide">
+                                    <div class="dop-screen__upper-part">
+                                        <div class="dop-screen__title">Комфорт и стиль</div>
+                                        <div class="dop-screen__desc">Прозрачный OLED дисплей дает потрясающе четкое
+                                            изображение
+                                            с оптимальными для восприятия параметрами: цветопередача, глубина, яркость,
+                                            контрастность, плотность пикселей. Взаимодействие с таким дисплеем— это приятный
+                                            и
+                                            простой процесс.</div>
+                                    </div>
+                                    <div class="dop-screen__downer-part">
+                                        <img src="../img/Product-page/dop-screen-3.png" alt="" class="dop-screen__image">
+                                    </div>
+                                </div>
+                                <div class="dop-screen__item swiper-slide">
+                                    <div class="dop-screen__upper-part">
+                                        <div class="dop-screen__title">Дополняя реальность</div>
+                                        <div class="dop-screen__desc">Создаем новые грани видимых объектов, соединяем и
+                                            экспериментируем. В считанные секунды меняем оттенок нового презентационного
+                                            автомобиля, рассматриваем виртуальные детали мраморной скульптуры, узнаем
+                                            информацию
+                                            о её авторе и устанавливаем декорации-голограммы для предстоящего перфоманса.
+                                        </div>
+                                    </div>
+                                    <div class="dop-screen__downer-part">
+                                        <img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image">
+                                    </div>
                                 </div>
                             </div>
+                            
+                            <!-- <div class="dop-screen__content-wrapper"> -->
+                                
+                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
