--- a/src/html/header.html
+++ b/src/html/header.html
@@ -16,7 +16,7 @@
                 <button class="button button_purple-text">Обратная связь</button>
             </div>
         </div>
-        <img class="header__logo--mob logo for-mob-block" src="../img/ico/logo-mob.svg" alt="">
+        <img class="header__logo--mob-top logo for-mob-block" src="../img/ico/logo-mob-new.svg" alt="">
         <div class="burger for-mob-block">
             <div class="burger__center-stick"></div>
         </div>
