--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -152,7 +152,7 @@
 		</div>
 	</section>
 
-	<section class="screen second-screen scrolling-item">
+	<section id="characteristics" class="screen second-screen scrolling-item">
 		<div class="container-page">
 			<div class="container-content">
 				<div class="second-screen__content-wrapper">
@@ -379,7 +379,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="screen dop-screen2">
+	<section id="rent" class="screen dop-screen2">
 		<div class="container-page">
 			<div class="container-content">
 				<div class="dop-screen2__content-wrapper">
@@ -455,7 +455,7 @@
 		</div>
 	</section>
 
-	<section id="rent" class="screen sixth-screen scrolling-item">
+	<section id="purchase" class="screen sixth-screen scrolling-item">
 		<div class="container-page">
 			<div class="container-content">
 				<div class="sixth-screen__content-wrapper">
@@ -745,7 +745,7 @@
 		</div>
 	</section>
 
-	<section class="contact-form">
+	<section id="feedback" class="contact-form">
 		<div class="container-content">
 			<div class="contact-form__content">
 				<div class="contact-form__part">
