--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,11 +4,21 @@
             <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
             <nav class="header__nav">
                 <ul class="header__menu menu">
-                    <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
-                    <li class="menu__item menu-items-txt">Характеристики</li>
-                    <li class="menu__item menu-items-txt">интерактив</li>
-                    <li class="menu__item menu-items-txt">Сценарии использования</li>
-                    <a href="#rent"><li class="menu__item menu-items-txt">Аренда и продажа</li></a>
+                    <a href="#holostand">
+                        <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
+                    </a>
+                    <a href="#characteristics">
+                        <li class="menu__item menu-items-txt">Характеристики</li>
+                    </a>
+                    <a href="#interactive">
+                        <li class="menu__item menu-items-txt">Интерактив</li>
+                    </a>
+                    <a href="#using">
+                        <li class="menu__item menu-items-txt">Сценарии использования</li>
+                    </a>
+                    <a href="#rent">
+                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
+                    </a>
                 </ul>
             </nav>
             <div class="header-contacts__buttons">
@@ -29,11 +39,21 @@
             <img class="mob-menu__cross" src="../img/ico/cross.svg"></img>
         </div>
         <div class="mob-menu__nav">
-            <a href="#" class="mob-menu__items">Kelpie holostand</a>
-            <a href="#" class="mob-menu__items">Характеристики</a>
-            <a href="#" class="mob-menu__items">интерактив</a>
-            <a href="#" class="mob-menu__items">Использование</a>
-            <a href="#" class="mob-menu__items">Аренда и продажа</a>
+            <a href="#holostand">
+                <li class="mob-menu__items">Kelpi3 holostand</li>
+            </a>
+            <a href="#characteristics">
+                <li class="mob-menu__items">Характеристики</li>
+            </a>
+            <a href="#interactive">
+                <li class="mob-menu__items">Интерактив</li>
+            </a>
+            <a href="#using">
+                <li class="mob-menu__items">Сценарии использования</li>
+            </a>
+            <a href="#rent">
+                <li class="mob-menu__items">Аренда и продажа</li>
+            </a>
         </div>
         <div class="mob-menu__buttons">
             <button class="button button_transparent mob-menu__button">Купить</button>
